# cucli

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  PROMPT.md  README.md  REFACTORING_PATTERNS.md  REFACTOR_PROMPT.md  REFACTOR_STATUS.md  TODO.md  create_cassettes.py  pyproject.toml
clickup-api-docs/: adddependency.md  addguesttofolder.md  addguesttolist.md  addguesttotask.md  addtagsfromtimeentries.md  addtagtotask.md  addtasklink.md  addtasktolist.md  changetagnamesfromtimeentries.md  createatimeentry.md  createchatchannel.md  createchatmessage.md  createchatreaction.md  createchatviewcomment.md  createchecklist.md  createchecklistitem.md  createdirectmessagechatchannel.md  createdocpublic.md  createfolder.md  createfolderfromtemplate.md  createfolderlesslist.md  createfolderlistfromtemplate.md  createfolderview.md  creategoal.md  createkeyresult.md  createlist.md  createlistcomment.md  createlistview.md  createlocationchatchannel.md  createpagepublic.md  createreplymessage.md  createspace.md  createspacelistfromtemplate.md  createspacetag.md  createspaceview.md  createtask.md  createtaskattachment.md  createtaskcomment.md  createtaskfromtemplate.md  createteamview.md  (+126 more)
tests/: README.md  __init__.py  conftest.py  test_api.py  test_cli.py  test_cli.py.bak  test_dangerous_mode.py  test_folder_api.py  test_goals_api.py  test_goals_cli.py  test_list_comments_api.py  test_list_comments_cli.py  test_models.py  test_task_attachments_api.py  test_task_attachments_cli.py  test_task_dependencies_api.py  test_task_dependencies_cli.py  test_task_links_api.py  (+2 more)
(+222 files in other folders)
